--- a/package.json
+++ b/package.json
@@ -1,44 +1,47 @@
 {
-  "name": "airbnb",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "lint-staged":{
-    "*.tsx":["eslint --max-warnings=0"]
-  },
-  "scripts": {
-    "format": "prettier .",
-    "format:check": "npm run format -- --check",
-    "format:fix": "npm run format -- --write",
-    "lint:fix": "npm run lint --fix",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 5",
-    "preview": "vite preview",
-    "prepare": "husky install"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.49.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
-    "postcss": "^8.4.29",
-    "prettier": "^3.0.3",
-    "tailwindcss": "^3.3.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.5"
-  }
+    "name": "airbnb",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "lint-staged": {
+        "*.tsx": [
+            "eslint --max-warnings=2",
+            "prettier --check"
+        ]
+    },
+    "scripts": {
+        "format": "prettier .",
+        "format:check": "npm run format -- --check",
+        "format:fix": "npm run format -- --write",
+        "lint:fix": "npm run lint --fix",
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "lint": "eslint ./src/**/*.tsx --ext ts,tsx --report-unused-disable-directives --max-warnings 5",
+        "preview": "vite preview",
+        "prepare": "husky install"
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.2.15",
+        "@types/react-dom": "^18.2.7",
+        "@typescript-eslint/eslint-plugin": "^6.6.0",
+        "@typescript-eslint/parser": "^6.6.0",
+        "@vitejs/plugin-react": "^4.0.3",
+        "autoprefixer": "^10.4.15",
+        "eslint": "^8.49.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.3",
+        "husky": "^8.0.3",
+        "lint-staged": "^14.0.1",
+        "postcss": "^8.4.29",
+        "prettier": "^3.0.3",
+        "tailwindcss": "^3.3.3",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.2.2",
+        "vite": "^4.4.5"
+    }
 }
